--- a/WolvenKit/Views/CodeEditor/CodeEditorView.xaml
+++ b/WolvenKit/Views/CodeEditor/CodeEditorView.xaml
@@ -17,92 +17,83 @@
 
             <ResourceDictionary.MergedDictionaries>
 
-                <hc:Theme Name="HandyTheme"/>
-                <hc:Theme Skin="Dark"/>
+                <hc:ThemeResources/>
+                <hc:Theme/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
     </catel:DataWindow.Resources>
-    <Border Width="auto" Height="auto" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
+    <Border  hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}" Width="auto" Height="auto" BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
 
-        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="auto" Height="auto">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
+        <Grid Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
 
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
-
-            <Grid x:Name="DraggableTitleBar" Grid.ColumnSpan="2" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+            <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
                 <!--TitleBar  Please add onmousedown event to be able to drag the window-->
-                <Button Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
+                <Button Click="Button_Click" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
                     <iconPacks:PackIconCodicons   Kind="Close"/>
                 </Button>
-                <Button BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" >
+                <Button  Click="Button_Click_1" BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" >
                     <iconPacks:PackIconCodicons  Kind="ChromeMinimize"/>
                 </Button>
-                <TextBlock Text="Code Editor" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
-            </Grid>
 
 
-            <Grid Grid.Row="1" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" Grid.ColumnSpan="2" Height="30">
-                <Menu Background="Transparent">
-                    <MenuItem Header="File">
-                        <MenuItem Header="New"   Background="Transparent"/>
-                        <MenuItem Header="Open"  Background="Transparent"/>
-                        <MenuItem Header="Recent"  Background="Transparent"/>
-
-
-                    </MenuItem>
-                    <MenuItem Header="Edit">
-                        <MenuItem Header="Undo" Background="Transparent" hc:Poptip.Content="CTRL+Z" hc:Poptip.Placement="Left"/>
-                        <MenuItem Header="Redo" Background="Transparent" hc:Poptip.Content="CTRL+Y" hc:Poptip.Placement="Left"/>
-                        <MenuItem Header="Cut" Background="Transparent" hc:Poptip.Content="CTRL+X" hc:Poptip.Placement="Left"/>
-                        <MenuItem Header="Copy" Background="Transparent" hc:Poptip.Content="CTRL+C" hc:Poptip.Placement="Left"/>
-                        <MenuItem Header="Paste" Background="Transparent" hc:Poptip.Content="CTRL+V" hc:Poptip.Placement="Left"/>
-
-
-
-                    </MenuItem>
-
-                    <MenuItem Background="Transparent" Header="SpecialMenu">
-
-
-
-
-                    </MenuItem>
+                <Menu MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Left" Margin="50,0,0,0">
                     <MenuItem Header="File"/>
-                    <MenuItem Header="File"/>
+                    <MenuItem Header="Edit"/>
+                    <MenuItem Header="View"/>
+                    <MenuItem Header="Compile"/>
 
                 </Menu>
-            </Grid>
-
-            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="2" Grid.ColumnSpan="2" Margin="0">
-                <hc:TabControl TabStripPlacement="Bottom" Margin="0" MinWidth="400" MinHeight="200" Style="{StaticResource TabControlCapsuleSolid}">
-                    <hc:TabItem Header="Document">
-                        <avalonEdit:TextEditor/>
-
-                    </hc:TabItem>
-                    <hc:TabItem Header="Document">
-                        <avalonEdit:TextEditor SyntaxHighlighting="C#" LineNumbersForeground="{DynamicResource MahApps.Brushes.Accent}" ShowLineNumbers="True"  Margin="0"/>
-                    </hc:TabItem>
-                </hc:TabControl>
+                <iconPacks:PackIconCodicons Margin="13,0,0,0" Height="23" Kind="Code" Width="23" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
             </Grid>
+
 
 
          
 
+            <Grid  Margin="3,33,3,3">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+
+                <hc:TabControl ShowCloseButton="True" Grid.Column="1" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+                    <hc:TabItem Header="wat">
+
+                    </hc:TabItem>
+                    <hc:TabItem Header="wat">
+
+                    </hc:TabItem>
+                </hc:TabControl>
+                
+                
+                
+                
+                
+                
+                
+                
+                
+                
+                
+                
+                
+              
+
+            </Grid>
+
+
+
+
+
+
 
 
         </Grid>
+
     </Border>
 
 </catel:DataWindow>
