--- a/WolvenKit/Views/PluginManager/PluginManagerView.xaml
+++ b/WolvenKit/Views/PluginManager/PluginManagerView.xaml
@@ -2,8 +2,7 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"  
-                  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
-                  xmlns:hc="https://handyorg.github.io/handycontrol"
+                  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol"
                   ShowInTaskbar="True" 
                   AllowsTransparency="True"           
                   BorderBrush="{x:Null}" 
@@ -29,24 +28,24 @@
     <catel:DataWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <hc:Theme Name="HandyTheme"/>
-                <hc:Theme Skin="Dark"/>
+                <hc:ThemeResources AccentColor="{DynamicResource MahApps.Brushes.Accent3}"/>
+                <hc:Theme/>
             </ResourceDictionary.MergedDictionaries>
 
             <DataTemplate x:Key="PluginListBoxItemContentInstall">
                 <Grid Margin="-40,0,40,0" >
-                    <hc:Tag MinWidth="400" HorizontalContentAlignment="Left"  Margin="15,0,50,0" ShowCloseButton="False" Content="TEMPLATEPLUGINTITLE" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+                    <hc:Tag MinWidth="400"  HorizontalContentAlignment="Left"  Margin="15,0,50,0" ShowCloseButton="False" Content="TEMPLATEPLUGINTITLE" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
                         <hc:Tag.Header>
                             <iconPacks:PackIconBoxIcons Kind="RegularPlug"/>
                         </hc:Tag.Header>
                     </hc:Tag>
-                    <hc:ProgressButton Content="Install" Width="90"  HorizontalAlignment="Right" Margin="0,0,-45,0" />
+                    <hc:ProgressButton  Content="Install" Width="90"  HorizontalAlignment="Right" Margin="0,0,-45,0" />
                 </Grid>
             </DataTemplate>
 
             <DataTemplate x:Key="PluginListBoxItemContentUninstall">
                 <Grid Margin="-40,0,40,0">
-                    <hc:Tag MinWidth="400" HorizontalContentAlignment="Left"  Margin="15,0,50,0" ShowCloseButton="False" Content="TEMPLATEPLUGINTITLE" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
+                    <hc:Tag MinWidth="400" hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}" HorizontalContentAlignment="Left"  Margin="15,0,50,0" ShowCloseButton="False" Content="TEMPLATEPLUGINTITLE" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
                         <hc:Tag.Header>
                             <iconPacks:PackIconBoxIcons Kind="RegularPlug"/>
                         </hc:Tag.Header>
@@ -61,7 +60,7 @@
 
 
 
-    <Border BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
+    <Border  hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}"  BorderBrush="{DynamicResource MahApps.Brushes.Accent4}" BorderThickness="1">
         <Grid>
 
             <Grid.RowDefinitions>
@@ -85,7 +84,7 @@
             </Grid>
 
 
-            <hc:TabControl Style="{StaticResource TabControlInLine}" TabStripPlacement="Bottom" Grid.Row="2">
+            <hc:TabControl  Style="{StaticResource TabControlInLine}" TabStripPlacement="Bottom" Grid.Row="2">
 
                 <hc:TabItem Header="Available">
                     <Grid>
