--- a/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
@@ -4,16 +4,22 @@
                    xmlns:catel="http://schemas.catelproject.com" xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" xmlns:hc="https://handyorg.github.io/handycontrol">
 
     <Grid hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}"  Background="{DynamicResource MahApps.Brushes.ThemeBackground}" MinWidth="300" MinHeight="300" >
+
+
+  
         <Grid Margin="3,75,3,0">
+
             <wv2:WebView2 Source="https://wolvenkit.red/"/>
+
         </Grid>
+     
         <Grid HorizontalAlignment="Right" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
 
         <Grid HorizontalAlignment="left" Width="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
         <Grid VerticalAlignment="Top" HorizontalAlignment="Right" Width="30" Height="3" Background="{DynamicResource MahApps.HamburgerMenu.Pane.Background}"></Grid>
         <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" Orientation="Horizontal">
 
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center " FontSize="20" Text="Official Website"></TextBlock>
+            <TextBlock HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center " FontSize="20" Text="Website"></TextBlock>
             <hc:Divider Margin="15" Orientation="Vertical" Height="45" HorizontalAlignment="Center" VerticalAlignment="Center"></hc:Divider>
             <hc:AnimationPath Height="45" Width="45" Data="{DynamicResource WikiGeo}" 
                           Duration="00:00:08" 
@@ -29,6 +35,15 @@
                 </hc:AnimationPath.RenderTransform>
             </hc:AnimationPath>
         </StackPanel>
+
+
+            <hc:ComboBox HorizontalContentAlignment="Right" x:Name="SelectWebsiteTypeCombo" Background="Transparent" Width="200"  Margin="0,20,155,0" SelectedIndex="0" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="20" Height="45">
+                <ComboBoxItem Content="Project"/>
+                <ComboBoxItem Content="Organization"/>
+            </hc:ComboBox>
+
+
+
 
     </Grid>
 
