--- a/WolvenKit/Views/SettingsPages/EditorSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/EditorSettingsView.xaml
@@ -6,12 +6,12 @@
     <Grid hc:ThemeManager.AccentColorElement="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
         <hc:SideMenu Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
 
-            <hc:SideMenuItem  >
+            <hc:SideMenuItem x:Name="GeneralSubItem" Selected="GeneralSubItem_Selected" >
                 <hc:SideMenuItem.Header>
                     <TextBlock Text="General" FontSize="10.5"/>
                 </hc:SideMenuItem.Header>
             </hc:SideMenuItem>
-            <hc:SideMenuItem  >
+            <hc:SideMenuItem x:Name="CompatibilitySubItem"  Selected="CompatibilitySubItem_Selected" >
                 <hc:SideMenuItem.Header>
                     <TextBlock Text="Compatibility Library Paths" FontSize="10.5"/>
                 </hc:SideMenuItem.Header>
@@ -19,6 +19,7 @@
 
         </hc:SideMenu>
 
+        <Grid Margin="150,1,0,0" x:Name="SettingsViewer"></Grid>
 
 
     </Grid>
