--- a/WolvenKit/Views/UserControlHostWindowView.xaml
+++ b/WolvenKit/Views/UserControlHostWindowView.xaml
@@ -21,16 +21,13 @@
 
                 <Grid x:Name="DraggableTitleBar" VerticalAlignment="Top" Grid.ColumnSpan="2" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" MouseLeftButtonDown="DraggableTitleBar_MouseLeftButtonDown">
                     <!--TitleBar  Please add onmousedown event to be able to drag the window-->
-                    <Button Click="Button_Click" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
+                    <Button Click="ButtonClose" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" BorderBrush="{x:Null}"  HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,5,3" >
                         <iconPacks:PackIconCodicons   Kind="Close"/>
                     </Button>
-                    <Button  Click="Button_Click_1" BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" >
+                    <Button  Click="ButtonMinimize" BorderBrush="{x:Null}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="3,3,45,3" >
                         <iconPacks:PackIconCodicons  Kind="ChromeMinimize"/>
                     </Button>
-
-
-                    <TextBlock Text="Asset Browser" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
-
+                    <TextBlock Text="Project Wizard" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0"/>
                 </Grid>
 
 
